--- a/assets/css/gsdk.css
+++ b/assets/css/gsdk.css
@@ -61,21 +61,21 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
         margin-left: 0;
     }
 
-    .nav-open .navbar-collapse {
-        -webkit-transform: translate3d(0px, 0, 0);
-        -moz-transform: translate3d(0px, 0, 0);
-        -o-transform: translate3d(0px, 0, 0);
-        -ms-transform: translate3d(0px, 0, 0);
-        transform: translate3d(0px, 0, 0);
-    }
+    /*.nav-open .navbar-collapse {*/
+    /*    -webkit-transform: translate3d(0px, 0, 0);*/
+    /*    -moz-transform: translate3d(0px, 0, 0);*/
+    /*    -o-transform: translate3d(0px, 0, 0);*/
+    /*    -ms-transform: translate3d(0px, 0, 0);*/
+    /*    transform: translate3d(0px, 0, 0);*/
+    /*}*/
 
-    .nav-open .navbar .container {
-        -webkit-transform: translate3d(-200px, 0, 0);
-        -moz-transform: translate3d(-200px, 0, 0);
-        -o-transform: translate3d(-200px, 0, 0);
-        -ms-transform: translate3d(-200px, 0, 0);
-        transform: translate3d(-200px, 0, 0);
-    }
+    /*.nav-open .navbar .container {*/
+    /*    -webkit-transform: translate3d(-200px, 0, 0);*/
+    /*    -moz-transform: translate3d(-200px, 0, 0);*/
+    /*    -o-transform: translate3d(-200px, 0, 0);*/
+    /*    -ms-transform: translate3d(-200px, 0, 0);*/
+    /*    transform: translate3d(-200px, 0, 0);*/
+    /*}*/
 
     .navbar-burger .container {
         padding: 0 15px;
