--- a/assets/css/gsdk.css
+++ b/assets/css/gsdk.css
@@ -45,77 +45,32 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 }
 
 @media (min-width: 768px) {
-    /*.navbar-form {*/
-    /*    margin-top: 21px;*/
-    /*    margin-bottom: 21px;*/
-    /*    padding-left: 5px;*/
-    /*    padding-right: 5px;*/
-    /*}*/
-
-    /*.nav-open .navbar-collapse {*/
-    /*    transform: translate3d(0px, 0, 0);*/
-    /*}*/
-
-    /*.nav-open .navbar .container {*/
-    /*    transform: translate3d(-200px, 0, 0);*/
-    /*}*/
-
     .navbar-burger .container {
         padding: 0 15px;
     }
-
     .navbar-burger .navbar-header {
         width: 100%;
     }
-
     .navbar-burger .navbar-toggle {
         display: block;
         margin-right: 0;
     }
-
-    /*.navbar-burger.navbar .navbar-collapse.collapse,*/
-    /*.navbar-burger.navbar .navbar-collapse.collapse.in,*/
-    /*.navbar-burger.navbar .navbar-collapse.collapsing {*/
-    /*    display: none !important;*/
-    /*}*/
 }
-
-/*!*          Changes for small display      *!*/
 @media (max-width: 767px) {
-    /*.navbar-transparent {*/
-    /*    padding-top: 0px;*/
-    /*}*/
-
     body {
         position: relative;
     }
-
-    /*body > .navbar-collapse {*/
-    /*    width: 230px;*/
-    /*    transform: translate3d(230px, 0, 0);*/
-    /*}*/
-
     .navbar .container {
         width: 100%;
         position: relative;
         transform: translate3d(0px, 0, 0);
         transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     }
-
-    /*.nav-open .navbar .container {*/
-    /*    transform: translate3d(-230px, 0, 0);*/
-    /*}*/
-
     .navbar .navbar-collapse.collapse,
     .navbar .navbar .navbar-collapse.collapse.in,
     .navbar .navbar .navbar-collapse.collapsing {
         display: none !important;
     }
-
-    /*.nav-open .navbar-collapse {*/
-    /*    transform: translate3d(0px, 0, 0);*/
-    /*}*/
-
     .navbar-toggle .icon-bar {
         display: block;
         position: relative;
@@ -125,11 +80,9 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
         border-radius: 1px;
         margin: 0 auto;
     }
-
     .navbar-default .navbar-toggle .icon-bar {
         background-color: #888888;
     }
-
     .navbar-header .navbar-toggle {
         margin-top: 17px;
         margin-bottom: 17px;
@@ -137,35 +90,27 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
         height: 40px;
     }
 }
-
-.bar1,
-.bar2,
-.bar3 {
+.bar1, .bar2, .bar3 {
     outline: 1px solid transparent;
 }
-
 .bar1 {
-    top: 0px;
+    top: 0;
     animation: topbar-back 500ms 0s;
     animation-fill-mode: forwards;
 }
-
 .bar2 {
     opacity: 1;
 }
-
 .bar3 {
     bottom: 0;
     animation: bottombar-back 500ms 0s;
     animation-fill-mode: forwards;
 }
-
 .toggled .bar1 {
     top: 6px;
     animation: topbar-x 500ms 0s;
     animation-fill-mode: forwards;
 }
-
 .toggled .bar2 {
     opacity: 0;
 }
@@ -178,7 +123,7 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 
 @keyframes topbar-x {
     0% {
-        top: 0px;
+        top: 0;
         transform: rotate(0deg);
     }
     45% {
@@ -205,14 +150,14 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
         transform: rotate(5deg);
     }
     100% {
-        top: 0px;
+        top: 0;
         transform: rotate(0);
     }
 }
 
 @keyframes bottombar-x {
     0% {
-        bottom: 0px;
+        bottom: 0;
         transform: rotate(0deg);
     }
     45% {
@@ -239,7 +184,7 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
         transform: rotate(-5deg);
     }
     100% {
-        bottom: 0px;
+        bottom: 0;
         transform: rotate(0);
     }
 }
